first stab at new configs to correct capitalization of registry keys

--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/burster.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/burster.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=2.0.0.0, Culture=neutral, PublicKeyToken=null"/>
+        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=2.1.1.0, Culture=neutral, PublicKeyToken=null"/>
     </configSections>
     <flashpointSecurePlayer>
         <templates>
@@ -9,10 +9,10 @@
 				<mode name="SOFTWARE" commandLine="Basilisk-Portable\Basilisk-Portable.exe &quot;%FP_URL%&quot;" />
 				<modifications>
 					<registryStates binaryType="SCS_32BIT_BINARY">
-						<registryState type="VALUE" keyName="HKEY_CURRENT_USER\SOFTWARE\ITECHNOLOGIE\DECODE" valueName="Path" value="%FP_STARTUP_PATH%\BrowserPlugins\Burster\itz.dll" valueKind="String"/>
-						<registryState type="VALUE" keyName="HKEY_CURRENT_USER\SOFTWARE\ITECHNOLOGIE\PLAYER" valueName="Path26" value="%FP_STARTUP_PATH%\BrowserPlugins\Burster\player26\player26.exe" valueKind="String"/>
-						<registryState type="VALUE" keyName="HKEY_CURRENT_USER\SOFTWARE\ITECHNOLOGIE\PLAYER" valueName="Path" value="%FP_STARTUP_PATH%\BrowserPlugins\Burster\player24\player.exe" valueKind="String"/>
-						<registryState type="VALUE" keyName="HKEY_CURRENT_USER\SOFTWARE\ITECHNOLOGIE\PLUGINS" valueName="Path" value="%FP_STARTUP_PATH%\BrowserPlugins\Burster\" valueKind="String"/>
+						<registryState type="VALUE" keyName="HKEY_CURRENT_USER\SOFTWARE\iTechnologie\Decode" valueName="Path" value="%FP_STARTUP_PATH%\BrowserPlugins\Burster\itz.dll" valueKind="String"/>
+						<registryState type="VALUE" keyName="HKEY_CURRENT_USER\SOFTWARE\iTechnologie\Player" valueName="Path26" value="%FP_STARTUP_PATH%\BrowserPlugins\Burster\player26\player26.exe" valueKind="String"/>
+						<registryState type="VALUE" keyName="HKEY_CURRENT_USER\SOFTWARE\iTechnologie\Player" valueName="Path" value="%FP_STARTUP_PATH%\BrowserPlugins\Burster\player24\player.exe" valueKind="String"/>
+						<registryState type="VALUE" keyName="HKEY_CURRENT_USER\SOFTWARE\iTechnologie\Plugins" valueName="Path" value="%FP_STARTUP_PATH%\BrowserPlugins\Burster\" valueKind="String"/>
 					</registryStates>
 				</modifications>
 			</template>
