--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/cosmo211.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/cosmo211.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=2.0.0.0, Culture=neutral, PublicKeyToken=null" />
+        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=2.1.1.0, Culture=neutral, PublicKeyToken=null" />
     </configSections>
     <flashpointSecurePlayer>
 		<templates>
@@ -75,33 +75,33 @@
 						<registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{06646732-BCF3-11D0-9518-00C04FC2DD79}\PINS\INPUT\TYPES\{73646976-0000-0010-8000-00AA00389B71}\{00000000-0000-0000-0000-000000000000}"
 							valueName="" />
 							
-						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\COSMOSOFTWARE\ROBRENDERER\1.0\D3D"
-							valueName="PATH" value="%FP_STARTUP_PATH%\VRML\Cosmo211\System32\rob10_d3d.dll"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CosmoSoftware\RobRenderer\1.0\D3D"
+							valueName="path" value="%FP_STARTUP_PATH%\VRML\Cosmo211\System32\rob10_d3d.dll"
 							valueKind="String" />
-						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\COSMOSOFTWARE\ROBRENDERER\1.0\D3D"
-							valueName="UINAME" value="Direct3D Renderer" valueKind="String" />
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CosmoSoftware\RobRenderer\1.0\D3D"
+							valueName="UIName" value="Direct3D Renderer" valueKind="String" />
 							
-						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\COSMOSOFTWARE\ROBRENDERER\1.0\NORENDER"
-							valueName="PATH" value="%FP_STARTUP_PATH%\VRML\Cosmo211\System32\rob10_none.dll"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CosmoSoftware\RobRenderer\1.0\NoRender"
+							valueName="path" value="%FP_STARTUP_PATH%\VRML\Cosmo211\System32\rob10_none.dll"
 							valueKind="String" />
-						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\COSMOSOFTWARE\ROBRENDERER\1.0\NORENDER"
-							valueName="UINAME" value="NonRendering Renderer" valueKind="String" />
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CosmoSoftware\RobRenderer\1.0\NoRender"
+							valueName="UIName" value="NonRendering Renderer" valueKind="String" />
 							
-						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\COSMOSOFTWARE\ROBRENDERER\1.0\OPENGL"
-							valueName="PATH" value="%FP_STARTUP_PATH%\VRML\Cosmo211\System32\rob10_gl.dll"
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CosmoSoftware\RobRenderer\1.0\OpenGL"
+							valueName="path" value="%FP_STARTUP_PATH%\VRML\Cosmo211\System32\rob10_gl.dll"
 							valueKind="String" />
-						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\COSMOSOFTWARE\ROBRENDERER\1.0\OPENGL"
-							valueName="UINAME" value="OpenGL Renderer" valueKind="String" />
-						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\NETSCAPE\NETSCAPE NAVIGATOR" valueName="CURRENTVERSION" value="4.08 (en)" valueKind="String" />
-						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\NETSCAPE\NETSCAPE NAVIGATOR\4.08 (EN)\MAIN" valueName="INSTALL DIRECTORY" value="%FP_STARTUP_PATH%\Netscape4\Communicator" valueKind="String" />
-						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\NETSCAPE\NETSCAPE NAVIGATOR\4.08 (EN)\MAIN" valueName="JAVA DIRECTORY" value="%FP_STARTUP_PATH%\Netscape4\Communicator\Program\Java" valueKind="String" />
-						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\NETSCAPE\NETSCAPE NAVIGATOR\4.08 (EN)\MAIN" valueName="NETHELP DIRECTORY" value="%FP_STARTUP_PATH%\Netscape4\Communicator\Program\NetHelp" valueKind="String" />
-						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\NETSCAPE\NETSCAPE NAVIGATOR\4.08 (EN)\MAIN" valueName="PLUGINS DIRECTORY" value="%FP_STARTUP_PATH%\Netscape4\Communicator\Program\Plugins" valueKind="String" />
-						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\NETSCAPE\NETSCAPE NAVIGATOR\4.08 (EN)\MAIN" valueName="PROGRAM FOLDER" value="Netscape Navigator" valueKind="String" />
-						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\NETSCAPE\NETSCAPE NAVIGATOR\USERS" valueName="CURRENTUSER" value="DEFAULT" valueKind="String" />
-						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\NETSCAPE\NETSCAPE NAVIGATOR\USERS\DEFAULT" valueName="DIRROOT" value="%FP_STARTUP_PATH%\Netscape4\Users\default" valueKind="String" />
-						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\NETSCAPE\NETSCAPE NAVIGATOR\USERS\DEFAULT" valueName="USERNAME" value="Flashpoint" valueKind="String" />
-						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\NETSCAPE\NETSCAPE NAVIGATOR\USERS\DEFAULT" valueName="EMAILADDR" value="" valueKind="String" />
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CosmoSoftware\RobRenderer\1.0\OpenGL"
+							valueName="UIName" value="OpenGL Renderer" valueKind="String" />
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Netscape\Netscape Navigator" valueName="CurrentVersion" value="4.08 (en)" valueKind="String" />
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Netscape\Netscape Navigator\4.08 (en)\Main" valueName="Install Directory" value="%FP_STARTUP_PATH%\Netscape4\Communicator" valueKind="String" />
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Netscape\Netscape Navigator\4.08 (en)\Main" valueName="Java Directory" value="%FP_STARTUP_PATH%\Netscape4\Communicator\Program\Java" valueKind="String" />
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Netscape\Netscape Navigator\4.08 (en)\Main" valueName="NetHelp Directory" value="%FP_STARTUP_PATH%\Netscape4\Communicator\Program\NetHelp" valueKind="String" />
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Netscape\Netscape Navigator\4.08 (en)\Main" valueName="Plugins Directory" value="%FP_STARTUP_PATH%\Netscape4\Communicator\Program\Plugins" valueKind="String" />
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Netscape\Netscape Navigator\4.08 (en)\Main" valueName="Program Folder" value="Netscape Navigator" valueKind="String" />
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Netscape\Netscape Navigator\Users" valueName="CurrentUser" value="default" valueKind="String" />
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Netscape\Netscape Navigator\Users\default" valueName="DirRoot" value="%FP_STARTUP_PATH%\Netscape4\Users\default" valueKind="String" />
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Netscape\Netscape Navigator\Users\default" valueName="UserName" value="Flashpoint" valueKind="String" />
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Netscape\Netscape Navigator\Users\default" valueName="EmailAddr" value="" valueKind="String" />
 					</registryStates>
 				</modifications>
 			</template>
