--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/netscape.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/netscape.config
@@ -5,7 +5,7 @@
     </configSections>
     <flashpointSecurePlayer>
         <templates>
-			<template name="live3d">
+			<template name="netscape">
 				<mode name="SOFTWARE" commandLine="Netscape4\Communicator\Program\netscape.exe &quot;%FP_URL%&quot;" />
 				<modifications runAsAdministrator="true">
 					<registryStates binaryType="SCS_32BIT_BINARY">
