--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/svr.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/svr.config
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=2.0.0.0, Culture=neutral, PublicKeyToken=null" />
+        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=2.1.1.0, Culture=neutral, PublicKeyToken=null" />
     </configSections>
     <flashpointSecurePlayer>
 		<templates>
 			<template name="svr">
-				<mode name="WEB_BROWSER" webBrowserName="INTERNET_EXPLORER" workingDirectory="%FP_STARTUP_PATH%\SVR\SVR\SVR" />
+				<mode name="WEB_BROWSER" webBrowserName="INTERNET_EXPLORER" />
 				<modifications>
 					<registryStates binaryType="SCS_32BIT_BINARY">
 						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{96D94336-BF1E-11D1-8322-0020AF998C79}\1.0"
@@ -204,16 +204,15 @@
 						<registryState type="VALUE" keyName="HKEY_CURRENT_USER\SOFTWARE\CLASSES\.SVR" valueName="CONTENT TYPE" value="x-world/x-svr" valueKind="String" />
 						<registryState type="VALUE" keyName="HKEY_CURRENT_USER\SOFTWARE\CLASSES\.XVR" valueName="" value="Virtual_Worlds" valueKind="String" />
 						<registryState type="VALUE" keyName="HKEY_CURRENT_USER\SOFTWARE\CLASSES\.XVR" valueName="CONTENT TYPE" value="x-world/x-xvr" valueKind="String" />
-						<registryState type="VALUE" keyName="HKEY_CURRENT_USER\SOFTWARE\SUPERSCAPE\SUPERSCAPE VISCAPE\PREFERENCES"
-							valueName="NAME" value="FP" valueKind="String" />
-						<registryState type="VALUE" keyName="HKEY_CURRENT_USER\SOFTWARE\SUPERSCAPE\SUPERSCAPE VISCAPE\PREFERENCES"
-							valueName="COMPANY" value="FP" valueKind="String" />
-						<registryState type="VALUE" keyName="HKEY_CURRENT_USER\SOFTWARE\SUPERSCAPE\SUPERSCAPE VISCAPE\PREFERENCES"
-							valueName="PATH" value="..\..\..\SVR\SVR\SVR" valueKind="String" />
-						<registryState type="VALUE" keyName="HKEY_CURRENT_USER\SOFTWARE\SUPERSCAPE\SUPERSCAPE VISCAPE\PREFERENCES"
-							valueName="TEMPDIR" value="..\..\..\SVR\SVR\SVR\Temp" valueKind="String" />
+						<registryState type="VALUE" keyName="HKEY_CURRENT_USER\Software\Superscape\Superscape Viscape\Preferences"
+							valueName="Name" value="FP" valueKind="String" />
+						<registryState type="VALUE" keyName="HKEY_CURRENT_USER\Software\Superscape\Superscape Viscape\Preferences"
+							valueName="Company" value="FP" valueKind="String" />
+						<registryState type="VALUE" keyName="HKEY_CURRENT_USER\Software\Superscape\Superscape Viscape\Preferences"
+							valueName="Path" value="SVR" valueKind="String" />
+						<registryState type="VALUE" keyName="HKEY_CURRENT_USER\Software\Superscape\Superscape Viscape\Preferences"
+							valueName="TempDir" value="SVR\Temp" valueKind="String" />
 					</registryStates>
-					<oldCPUSimulator targetRate="200" />
 				</modifications>
 			</template>
 		</templates>
