--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/hypercosm.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/hypercosm.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<configSections>
-		<section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=2.0.0.0, Culture=neutral, PublicKeyToken=null" />
+		<section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=2.1.1.0, Culture=neutral, PublicKeyToken=null" />
 	</configSections>
 	
 	<flashpointSecurePlayer>
@@ -10,7 +10,7 @@
 				<mode name="SOFTWARE" commandLine="Hypercosm\components\Hypercosm3D5E449320.exe &quot;%FP_HTDOCS_FILE%&quot;" workingDirectory="%FP_HTDOCS_FILE_DIR%" />
 				<modifications runAsAdministrator="true">
 					<registryStates binaryType="SCS_32BIT_BINARY">
-						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\HYPERCOSM\HYPERCOSM PLAYER" valueName="SYSTEMDATAPATH" value="%FP_STARTUP_PATH%\Hypercosm" valueKind="String" />
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Hypercosm\Hypercosm Player" valueName="SystemDataPath" value="%FP_STARTUP_PATH%\Hypercosm" valueKind="String" />
 					</registryStates>
 					<oldCPUSimulator targetRate="233" />
 				</modifications>
