--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/unitywebplayer2fusion.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/unitywebplayer2fusion.config
@@ -5,18 +5,15 @@
     </configSections>
     <flashpointSecurePlayer>
 		<templates>
-			<template name="unitywebplayer3">
+			<template name="unitywebplayer2fusion">
 				<mode name="SOFTWARE" commandLine="Basilisk-Portable\Basilisk-Portable.exe &quot;%FP_URL%&quot;" />
 				<modifications>
 					<environmentVariables>
-					  <environmentVariable name="FP_UNITY_PATH" value="%FP_STARTUP_PATH%\BrowserPlugins\UnityWebPlayer\Unity3d3.x\loader" />
+					  <environmentVariable name="FP_UNITY_PATH" value="%FP_STARTUP_PATH%\BrowserPlugins\UnityWebPlayer\Unity3d2.x-fusion\loader" />
 					</environmentVariables>
 					<registryStates binaryType="SCS_32BIT_BINARY">
 						<registryState type="VALUE" keyName="HKEY_CURRENT_USER\Software\Unity\WebPlayer"
-							valueName="Directory" value="%FP_STARTUP_PATH%\BrowserPlugins\UnityWebPlayer\Unity3d3.x"
-							valueKind="String" />
-						<registryState type="VALUE" keyName="HKEY_CURRENT_USER\Software\Unity\WebPlayer"
-							valueName="UnityWebPlayerReleaseChannel" value="Stable"
+							valueName="Directory" value="%FP_STARTUP_PATH%\BrowserPlugins\UnityWebPlayer\Unity3d2.x-fusion"
 							valueKind="String" />
 					</registryStates>
 					<singleInstance executable="basilisk.exe" strict="false" />
