--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/unitywebplayer2scaling.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/unitywebplayer2scaling.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=2.0.0.0, Culture=neutral, PublicKeyToken=null" />
+        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=2.1.1.0, Culture=neutral, PublicKeyToken=null" />
     </configSections>
     <flashpointSecurePlayer>
 		<templates>
@@ -13,8 +13,11 @@
 					  <environmentVariable name="FP_UNITY_PATH" value="%FP_STARTUP_PATH%\BrowserPlugins\UnityWebPlayer\Unity3d2.x\loader" />
 					</environmentVariables>
 					<registryStates binaryType="SCS_32BIT_BINARY">
-						<registryState type="VALUE" keyName="HKEY_CURRENT_USER\SOFTWARE\UNITY\WEBPLAYER"
-							valueName="DIRECTORY" value="%FP_STARTUP_PATH%\BrowserPlugins\UnityWebPlayer\Unity3d2.x"
+						<registryState type="VALUE" keyName="HKEY_CURRENT_USER\Software\Unity\WebPlayer"
+							valueName="Directory" value="%FP_STARTUP_PATH%\BrowserPlugins\UnityWebPlayer\Unity3d2.x"
+							valueKind="String" />
+						<registryState type="VALUE" keyName="HKEY_CURRENT_USER\Software\Unity\WebPlayer"
+							valueName="UnityWebPlayerReleaseChannel" value="Stable"
 							valueKind="String" />
 					</registryStates>
 					<singleInstance executable="basilisk.exe" strict="false" />
