--- a/FlashpointSecurePlayer/FlashpointSecurePlayer.csproj
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayer.csproj
@@ -111,11 +111,11 @@
     <Compile Include="ToolStripSpringTextBox.Designer.cs">
       <DependentUpon>ToolStripSpringTextBox.cs</DependentUpon>
     </Compile>
-    <Compile Include="WebBrowser.cs">
+    <Compile Include="WebBrowserMode.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="WebBrowser.Designer.cs">
-      <DependentUpon>WebBrowser.cs</DependentUpon>
+    <Compile Include="WebBrowserMode.Designer.cs">
+      <DependentUpon>WebBrowserMode.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -123,8 +123,8 @@
     <EmbeddedResource Include="FlashpointSecurePlayerGUI.resx">
       <DependentUpon>FlashpointSecurePlayerGUI.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="WebBrowser.resx">
-      <DependentUpon>WebBrowser.cs</DependentUpon>
+    <EmbeddedResource Include="WebBrowserMode.resx">
+      <DependentUpon>WebBrowserMode.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
