add new/updated configs

--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/thingviewer.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/thingviewer.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=2.0.4.0, Culture=neutral, PublicKeyToken=null" />
+    <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=2.1.4.0, Culture=neutral, PublicKeyToken=null" />
   </configSections>
   <flashpointSecurePlayer>
     <templates>
@@ -98,11 +98,11 @@
             <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{01DC7832-F8E2-11D2-8070-00104BC86972}\PROXYSTUBCLSID32" value="{00020424-0000-0000-C000-000000000046}" valueKind="String" valueName="" />
             <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{01DC7832-F8E2-11D2-8070-00104BC86972}\TYPELIB" value="{F2D71282-BEE3-11D0-90AE-00A0C9270D87}" valueKind="String" valueName="" />
             <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{01DC7832-F8E2-11D2-8070-00104BC86972}\TYPELIB" value="1.0" valueKind="String" valueName="VERSION" />
-            <registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\COMPONENT CATEGORIES" valueName="" />
-            <registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\COMPONENT CATEGORIES\{7DD95801-9882-11CF-9FA9-00AA006C42C4}" valueName="" />
+            <registryState type="KEY" keyName="HKEY_CURRENT_USER\SOFTWARE\CLASSES\COMPONENT CATEGORIES" valueName="" />
+            <registryState type="KEY" keyName="HKEY_CURRENT_USER\SOFTWARE\CLASSES\COMPONENT CATEGORIES\{7DD95801-9882-11CF-9FA9-00AA006C42C4}" valueName="" />
             <registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{F2D71283-BEE3-11D0-90AE-00A0C9270D87}\IMPLEMENTED CATEGORIES" valueName="" />
             <registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{F2D71283-BEE3-11D0-90AE-00A0C9270D87}\IMPLEMENTED CATEGORIES\{7DD95801-9882-11CF-9FA9-00AA006C42C4}" valueName="" />
-            <registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\COMPONENT CATEGORIES\{7DD95802-9882-11CF-9FA9-00AA006C42C4}" valueName="" />
+            <registryState type="KEY" keyName="HKEY_CURRENT_USER\SOFTWARE\CLASSES\COMPONENT CATEGORIES\{7DD95802-9882-11CF-9FA9-00AA006C42C4}" valueName="" />
             <registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{F2D71283-BEE3-11D0-90AE-00A0C9270D87}\IMPLEMENTED CATEGORIES\{7DD95802-9882-11CF-9FA9-00AA006C42C4}" valueName="" />
             <registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\MIME\DATABASE\CONTENT TYPE\APPLICATION/X-PARABLE-THING" valueName="" />
             <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\MIME\DATABASE\CONTENT TYPE\APPLICATION/X-PARABLE-THING" value=".tms" valueKind="String" valueName="EXTENSION" />
