--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/burster.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/burster.config
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=2.1.1.0, Culture=neutral, PublicKeyToken=null"/>
+    <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=2.1.4.0, Culture=neutral, PublicKeyToken=null"/>
   </configSections>
   <flashpointSecurePlayer>
     <templates>
       <template name="burster">
-        <mode name="SOFTWARE" commandLine="Basilisk-Portable\Basilisk-Portable.exe &quot;%FP_URL%&quot;" />
+        <mode name="SOFTWARE" commandLine="fpnavigator-portable\FPNavigator.exe &quot;%FP_URL%&quot;" />
         <modifications>
           <registryStates binaryType="SCS_32BIT_BINARY">
             <registryState type="VALUE" keyName="HKEY_CURRENT_USER\SOFTWARE\iTechnologie\Decode" valueName="Path" value="%FP_STARTUP_PATH%\BrowserPlugins\Burster\itz.dll" valueKind="String"/>
@@ -14,6 +14,7 @@
             <registryState type="VALUE" keyName="HKEY_CURRENT_USER\SOFTWARE\iTechnologie\Player" valueName="Path" value="%FP_STARTUP_PATH%\BrowserPlugins\Burster\player24\player.exe" valueKind="String"/>
             <registryState type="VALUE" keyName="HKEY_CURRENT_USER\SOFTWARE\iTechnologie\Plugins" valueName="Path" value="%FP_STARTUP_PATH%\BrowserPlugins\Burster\" valueKind="String"/>
           </registryStates>
+          <singleInstance executable="flashpointbrowser.exe" strict="false" />
         </modifications>
       </template>
     </templates>
