fix the ActiveX Flash configs to include the TypeLib keys

--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.cinematycoon.gpcontrol.dll.flash.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.cinematycoon.gpcontrol.dll.flash.config
@@ -52,6 +52,11 @@
             <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\CLSID\{D27CDB70-AE6D-11cf-96B8-444553540000}" value="Macromedia Flash Factory Object" valueKind="String" valueName="" />
             <registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\TypeLib\{D27CDB6B-AE6D-11CF-96B8-444553540000}" valueName="" />
             <registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\TypeLib" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\TypeLib\{D27CDB6B-AE6D-11CF-96B8-444553540000}\1.0" valueName="" value="Shockwave Flash" valueKind="String" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\TypeLib\{D27CDB6B-AE6D-11CF-96B8-444553540000}\1.0\FLAGS" valueName="" value="0" valueKind="String" />
+            <registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\TypeLib\{D27CDB6B-AE6D-11CF-96B8-444553540000}\1.0\0" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\TypeLib\{D27CDB6B-AE6D-11CF-96B8-444553540000}\1.0\0\WIN32" valueName="" value="%FP_STARTUP_PATH%\ActiveX\Flash\Flash32_32_0_0_465.ocx" valueKind="String" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\TypeLib\{D27CDB6B-AE6D-11CF-96B8-444553540000}\1.0\HELPDIR" valueName="" value="%FP_STARTUP_PATH%\ActiveX\Flash" valueKind="String" />
             <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\MacromediaFlashPaper.MacromediaFlashPaper" value="Macromedia Flash Paper" valueKind="String" valueName="" />
             <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\MacromediaFlashPaper.MacromediaFlashPaper\CLSID" value="{D27CDB6E-AE6D-11cf-96B8-444553540000}" valueKind="String" valueName="" />
             <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\FlashFactory.FlashFactory.1" value="Macromedia Flash Factory Object" valueKind="String" valueName="" />
