update SVR configs

--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/svr.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/svr.config
@@ -104,8 +104,8 @@
             <registryState type="VALUE" keyName="HKEY_CURRENT_USER\SOFTWARE\CLASSES\.XVR" valueName="CONTENT TYPE" value="x-world/x-xvr" valueKind="String" />
             <registryState type="VALUE" keyName="HKEY_CURRENT_USER\Software\Superscape\Superscape Viscape\Preferences" valueName="Name" value="FP" valueKind="String" />
             <registryState type="VALUE" keyName="HKEY_CURRENT_USER\Software\Superscape\Superscape Viscape\Preferences" valueName="Company" value="FP" valueKind="String" />
-            <registryState type="VALUE" keyName="HKEY_CURRENT_USER\Software\Superscape\Superscape Viscape\Preferences" valueName="Path" value="SVR" valueKind="String" />
-            <registryState type="VALUE" keyName="HKEY_CURRENT_USER\Software\Superscape\Superscape Viscape\Preferences" valueName="TempDir" value="SVR\Temp" valueKind="String" />
+            <registryState type="VALUE" keyName="HKEY_CURRENT_USER\Software\Superscape\Superscape Viscape\Preferences" valueName="Path" value="%FP_STARTUP_PATH%\SVR" valueKind="String" />
+            <registryState type="VALUE" keyName="HKEY_CURRENT_USER\Software\Superscape\Superscape Viscape\Preferences" valueName="TempDir" value="%FP_STARTUP_PATH%\SVR\temp" valueKind="String" />
           </registryStates>
         </modifications>
       </template>
