--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/svrbasilisk.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/svrbasilisk.config
@@ -104,8 +104,8 @@
             <registryState type="VALUE" keyName="HKEY_CURRENT_USER\SOFTWARE\CLASSES\.XVR" valueName="CONTENT TYPE" value="x-world/x-xvr" valueKind="String" />
             <registryState type="VALUE" keyName="HKEY_CURRENT_USER\Software\Superscape\Superscape Viscape\Preferences" valueName="Name" value="FP" valueKind="String" />
             <registryState type="VALUE" keyName="HKEY_CURRENT_USER\Software\Superscape\Superscape Viscape\Preferences" valueName="Company" value="FP" valueKind="String" />
-            <registryState type="VALUE" keyName="HKEY_CURRENT_USER\Software\Superscape\Superscape Viscape\Preferences" valueName="Path" value="..\..\..\SVR\SVR\SVR" valueKind="String" />
-            <registryState type="VALUE" keyName="HKEY_CURRENT_USER\Software\Superscape\Superscape Viscape\Preferences" valueName="TempDir" value="..\..\..\SVR\SVR\SVR\Temp" valueKind="String" />
+            <registryState type="VALUE" keyName="HKEY_CURRENT_USER\Software\Superscape\Superscape Viscape\Preferences" valueName="Path" value="%FP_STARTUP_PATH%\SVR" valueKind="String" />
+            <registryState type="VALUE" keyName="HKEY_CURRENT_USER\Software\Superscape\Superscape Viscape\Preferences" valueName="TempDir" value="%FP_STARTUP_PATH%\SVR\temp" valueKind="String" />
           </registryStates>
           <singleInstance executable="flashpointnavigator.exe" strict="false" />
         </modifications>
